# castra

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
castra/: __init__.py  capacity.py  cli.py  client.py  commands.py  coordinator.py  dashboard.py  fleet.py  git.py  image.py  metrics.py  paths.py  progress.py  protocol.py  spec.py  storage.py  venv.py  worker.py  worktree.py
castra/templates/: base.yaml
tests/: conftest.py  test_capacity.py  test_commands.py  test_coordinator.py  test_dashboard.py  test_fleet.py  test_image.py  test_metrics.py  test_progress.py  test_protocol.py  test_spec.py  test_storage.py  test_worker.py  test_worktree.py
